--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="logo.png" alt="logo" class="logo" />
       <nav>
         <ul>
-          <li><a href="#">Login</a></li>
+          <li><a href="login.html">Login</a></li>
           <li><a href="#">Sign Up</a></li>
         </ul>
       </nav>
@@ -21,10 +21,10 @@
     <div class="loginbox">
       <h1>When R U Free? Sign up here!</h1>
       <p>Schedule your team meetings with WhenRUFree!</p>
-      <form>
+      <form name="login">
         <div id="first-row" class="row">
-          <input type="text" name="" placeholder="First Name" />
-          <input type="text" name="" placeholder="Last Name" />
+          <input type="text" name="fName" placeholder="First Name" />
+          <input type="text" name="lName" placeholder="Last Name" />
         </div>
         <div id="second-row" class="row">
           <input type="email" name="" placeholder="Email" />
@@ -44,5 +44,7 @@
         </div>
       </form>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
