--- a/login.html
+++ b/login.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link href="style.css" rel="stylesheet" />
-    <title>Login - WhenRUfree</title>
-  </head>
-
-  <header>
+<html>
+   <head>
+        <title>Login</title>
+        <link rel="stylesheet" type="text/css" href="styleMODAL.css">
+        <meta charset="utf-8">
+    </head>
+<header>
     <div class="container">
       <img src="logo.png" alt="logo" class="logo" />
-      <nav>
-        <ul>
-          <li><a href="#">Login</a></li>
-          <li><a href="index.html">Sign Up</a></li>
-        </ul>
+      <nav class="topnav">
+        <label for="hamburger">&#9776;</label>
+        <input type="checkbox" id="hamburger" />
+        <div class="nav-list">
+          <a href="index.html">Sign Up</a>
+          <a href="login.html">Login</a>
+        </div>
       </nav>
     </div>
   </header>
   <body>
-    <h1>login</h1>
+    <form name="loginForm" class="loginbox">
+      <div class="heading">
+        <h1> Returning User? Login Here! </h1>
+        <p>Schedule your team meetings with WhenRUFree!</p>
+      </div>
+        <div id="second-row" class="row">
+          <input type="email" name="" placeholder="Email" />
+          <input type="password" name="" placeholder="Enter Password" />
+        </div>
+        <div id="third-row" class="row">
+        </div>
+        <div id="fourth-row" class="row">
+          <input type="button" onclick="check(this.form)" value="Login"/>
+        </div>
+  </form>
+  <script src="script.js"></script>
+  <script src="app.js"></script>
+</body>
 
-    <form name="loginForm">
-      Email<input type="email" name="email" id="email" /> Password<input
-        type="password"
-        name="pswrd"
-        id="password"
-      />
-      <input type="button" onclick="check(this.form)" value="Login" />
-      <input type="reset" value="Cancel" />
-    </form>
-
-    <script src="app.js"></script>
-  </body>
 </html>
+
