Co-authored-by: ambersu123 <ambersu123@users.noreply.github.com> Co-authored-by: Paolo Urciullo <paolourciullo@users.noreply.github.com>

--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About-WhenRUfree</title>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="container">
+    <div class="calender-container">
       <div class="calender">
         <div class="months">
           <select id="month-list">
@@ -38,52 +39,61 @@
             <option>2031</option>
           </select>
         </div>
-        <div id="days">
-          <div>
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>5</span>
-            <span>6</span>
-            <span>7</span>
-          </div>
-          <div>
-            <span>8</span>
-            <span>9</span>
-            <span>10</span>
-            <span>11</span>
-            <span>12</span>
-            <span>13</span>
-            <span>14</span>
-          </div>
-          <div>
-            <span>15</span>
-            <span>16</span>
-            <span>17</span>
-            <span>18</span>
-            <span>19</span>
-            <span>20</span>
-            <span>21</span>
-          </div>
-          <div>
-            <span>22</span>
-            <span>23</span>
-            <span>24</span>
-            <span>25</span>
-            <span>26</span>
-            <span>27</span>
-            <span>28</span>
-          </div>
-          <div>
-            <span>29</span>
-            <span>29</span>
-            <span>30</span>
-            <span>31</span>
-          </div>
+        <table id="days">
+          <tr>
+            <th><span>Mon</span></th>
+            <th><span>Tue</span></th>
+            <th><span>Wed</span></th>
+            <th><span>Thu</span></th>
+            <th><span>Fri</span></th>
+            <th><span>Sat</span></th>
+            <th><span>Sun</span></th>
+          </tr>
+          <tr>
+            <td><span>1</span></td>
+            <td><span>2</span></td>
+            <td><span>3</span></td>
+            <td><span>4</span></td>
+            <td><span>5</span></td>
+            <td><span>6</span></td>
+            <td><span>7</span></td>
+          </tr>
+          <tr>
+            <td><span>8</span></td>
+            <td><span>9</span></td>
+            <td><span>10</span></td>
+            <td><span>11</span></td>
+            <td><span>12</span></td>
+            <td><span>13</span></td>
+            <td><span>14</span></td>
+          </tr>
+          <tr>
+            <td><span>15</span></td>
+            <td><span>16</span></td>
+            <td><span>17</span></td>
+            <td><span>18</span></td>
+            <td><span>19</span></td>
+            <td><span>20</span></td>
+            <td><span>21</span></td>
+          </tr>
+          <tr>
+            <td><span>22</span></td>
+            <td><span>23</span></td>
+            <td><span>24</span></td>
+            <td><span>25</span></td>
+            <td><span>26</span></td>
+            <td><span>27</span></td>
+            <td><span>28</span></td>
+          </tr>
+          <tr>
+            <td><span>29</span></td>
+            <td><span>29</span></td>
+            <td><span>30</span></td>
+            <td><span>31</span></td>
+          </tr>
         </div>
       </div>
     </div>
-    <a href="index.html">Back Home</a>
+    <!--<a href="index.html">Back Home</a>-->
   </body>
 </html>
