--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="second-row" class="row">
           <input type="email" name="" placeholder="Email" />
-          <input type="password" name="" placeholder="Enter Password" />
+          <input type="password" name="" placeholder="Enter Desired Password" />
         </div>
         <div id="third-row" class="row">
           <label for="timezone">Choose a Timezone:</label>
