--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About-WhenRUfree</title>
     <img src="logo.png" alt="logo" class="logo"/>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
@@ -96,8 +97,75 @@
           </tr>
           </div>
         </div>
+          <div class="modal">
+            <h1 id="time-modal"> What times might work? </h1>
+            <h3 id=noearlierhead>No earlier than:</h3>
+            <select id="noearlier">
+              <option>12:00AM</option>
+              <option>1:00AM</option>
+              <option>2:00AM</option>
+              <option>3:00AM</option>
+              <option>4:00AM</option>
+              <option>5:00AM</option>
+              <option>6:00AM</option>
+              <option>7:00AM</option>
+              <option>8:00AM</option>
+              <option>9:00AM</option>
+              <option>10:00AM</option>
+              <option>11:00AM</option>
+              <option>12:00PM</option>
+              <option>1:00PM</option>
+              <option>2:00PM</option>
+              <option>3:00PM</option>
+              <option>4:00PM</option>
+              <option>5:00PM</option>
+              <option>6:00PM</option>
+              <option>7:00PM</option>
+              <option>8:00PM</option>
+              <option>9:00PM</option>
+              <option>10:00PM</option>
+              <option>11:00PM</option>
+              <option>12:00PM</option>
+          </select>
+          <h3 id=nolaterhead>No later than:</h3>
+          <select id="nolater">
+            <option>12:00AM</option>
+            <option>1:00AM</option>
+            <option>2:00AM</option>
+            <option>3:00AM</option>
+            <option>4:00AM</option>
+            <option>5:00AM</option>
+            <option>6:00AM</option>
+            <option>7:00AM</option>
+            <option>8:00AM</option>
+            <option>9:00AM</option>
+            <option>10:00AM</option>
+            <option>11:00AM</option>
+            <option>12:00PM</option>
+            <option>1:00PM</option>
+            <option>2:00PM</option>
+            <option>3:00PM</option>
+            <option>4:00PM</option>
+            <option>5:00PM</option>
+            <option>6:00PM</option>
+            <option>7:00PM</option>
+            <option>8:00PM</option>
+            <option>9:00PM</option>
+            <option>10:00PM</option>
+            <option>11:00PM</option>
+            <option>12:00PM</option>
+          </select>
+          <div class="actions">
+            <button class="save">
+              Save <i class="fasfa-check"></i>
+            </button>
+            <button class="dismiss">
+              Dismiss <i class="fasfa-times"></i>
+            </button>
+          </div>
       </div>
     </div>
     <!--<a href="index.html">Back Home</a>-->
   </body>
 </html>
+
