social media bar

--- a/calendar.html
+++ b/calendar.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About-WhenRUfree</title>
     <img src="logo.png" alt="logo" class="logo" />
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <h3 class="url">Send URL to Team:</h3>
+    <div class="icon-bar">
+      <a href ="mailto: abc@example.com" class="email"><i class="fa fa-envelope"></i></a>
+      <a href="www.facebook.com" class="facebook"><i class="fa fa-facebook"></i></a>
+      <a href="www.discord.com" class="discord"><i class="fab fa-discord"></i></a>
+    </div>
     <div id="event-name">
       <p>Event Name</p>
     </div>
@@ -187,6 +193,7 @@
         </div>
       </div>
     </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
