Responsive Event create

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     />
     <link href="style.css" rel="stylesheet" />
   </head>
+  <input type="text" placeholder="Enter Event Name" id="Eventname">
   <body>
     <div class="calender-container" id="container">
       <div class="calender" id="calender">
@@ -174,6 +175,7 @@
       </div>
     </div>
     <!--<a href="index.html">Back Home</a>-->
+    <input type="submit" value="Create Event" id="Eventbtn">
     <script src="script.js"></script>
   </body>
 </html>
