--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger" />
         <div class="nav-list">
-          <a href="index.html">Sign Up</a>
-          <a href="login.html">Login</a>
+          <button class="nav-button"><a href="index.html">Sign Up</a></button>
+          <button class="nav-button"><a href="login.html">Login</a></button>
         </div>
       </nav>
     </div>
@@ -60,4 +60,7 @@
     <script src="app.js"></script>
   </body>
 
+  - add nice font and logo
+  - Button issue - invert color
+  - make it mobile from ashley github
  -->
