fix merge conflicts

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     />
     <link href="style.css" rel="stylesheet" />
   </head>
-  <input type="text" placeholder="Enter Event Name" id="Eventname">
+  <input type="text" placeholder="Enter Event Name" id="Eventname" />
   <body>
     <div class="calender-container" id="container">
       <div class="calender" id="calender">
@@ -60,47 +60,109 @@
             <div class="days-row" id="days-row">
               <tr>
                 <td>
-                  <button class="days" onclick="myFunction()">1</button>
+                  <button class="days" onclick="myFunction_1()">1</button>
                 </td>
-                <td><button class="days" onclick="myFunction()">2</button></td>
-                <td><button class="days" onclick="myFunction()">3</button></td>
-                <td><button class="days" onclick="myFunction()">4</button></td>
-                <td><button class="days" onclick="myFunction()">5</button></td>
-                <td><button class="days" onclick="myFunction()">6</button></td>
-                <td><button class="days" onclick="myFunction()">7</button></td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">2</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">3</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">4</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">5</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">6</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">7</button>
+                </td>
               </tr>
               <tr>
-                <td><button class="days" onclick="myFunction()">8</button></td>
-                <td><button class="days" onclick="myFunction()">9</button></td>
-                <td><button class="days" onclick="myFunction()">10</button></td>
-                <td><button class="days" onclick="myFunction()">11</button></td>
-                <td><button class="days" onclick="myFunction()">12</button></td>
-                <td><button class="days" onclick="myFunction()">13</button></td>
-                <td><button class="days" onclick="myFunction()">14</button></td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">8</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">9</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">10</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">11</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">12</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">13</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">14</button>
+                </td>
               </tr>
               <tr>
-                <td><button class="days" onclick="myFunction()">15</button></td>
-                <td><button class="days" onclick="myFunction()">16</button></td>
-                <td><button class="days" onclick="myFunction()">17</button></td>
-                <td><button class="days" onclick="myFunction()">18</button></td>
-                <td><button class="days" onclick="myFunction()">19</button></td>
-                <td><button class="days" onclick="myFunction()">20</button></td>
-                <td><button class="days" onclick="myFunction()">21</button></td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">15</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">16</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">17</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">18</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">19</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">20</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">21</button>
+                </td>
               </tr>
               <tr>
-                <td><button class="days" onclick="myFunction()">22</button></td>
-                <td><button class="days" onclick="myFunction()">23</button></td>
-                <td><button class="days" onclick="myFunction()">24</button></td>
-                <td><button class="days" onclick="myFunction()">25</button></td>
-                <td><button class="days" onclick="myFunction()">26</button></td>
-                <td><button class="days" onclick="myFunction()">27</button></td>
-                <td><button class="days" onclick="myFunction()">28</button></td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">22</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">23</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">24</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">25</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">26</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">27</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">28</button>
+                </td>
               </tr>
               <tr>
-                <td><button class="days" onclick="myFunction()">29</button></td>
-                <td><button class="days" onclick="myFunction()">29</button></td>
-                <td><button class="days" onclick="myFunction()">30</button></td>
-                <td><button class="days" onclick="myFunction()">31</button></td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">29</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">29</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">30</button>
+                </td>
+                <td>
+                  <button class="days" onclick="myFunction_1()">31</button>
+                </td>
               </tr>
             </div>
           </table>
@@ -168,14 +230,14 @@
           <button class="save" id="save">
             Save <i class="fasfa-check"></i>
           </button>
-          <button class="dismiss" id="dismiss" onclick="closeFunction()">
+          <button class="dismiss" id="dismiss" onclick="closeFunction_1()">
             Dismiss <i class="fasfa-times"></i>
           </button>
         </div>
       </div>
     </div>
     <!--<a href="index.html">Back Home</a>-->
-    <input type="submit" value="Create Event" id="Eventbtn">
+    <input type="submit" value="Create Event" id="Eventbtn" />
     <script src="script.js"></script>
   </body>
 </html>
