--- a/calendar.html
+++ b/calendar.html
@@ -77,47 +77,47 @@
             <!--<div class="days-row" id="days-row">-->
             <tr class="day-group">
               <td>
-                <button class="days" onclick="myFunction()">1</button>
+                <button class="days_big" onclick="myFunction()">1</button>
               </td>
-              <td><button class="days" onclick="myFunction()">2</button></td>
-              <td><button class="days" onclick="myFunction()">3</button></td>
-              <td><button class="days" onclick="myFunction()">4</button></td>
-              <td><button class="days" onclick="myFunction()">5</button></td>
-              <td><button class="days" onclick="myFunction()">6</button></td>
-              <td><button class="days" onclick="myFunction()">7</button></td>
+              <td><button class="days_big" onclick="myFunction()">2</button></td>
+              <td><button class="days_big" onclick="myFunction()">3</button></td>
+              <td><button class="days_big" onclick="myFunction()">4</button></td>
+              <td><button class="days_big" onclick="myFunction()">5</button></td>
+              <td><button class="days_big" onclick="myFunction()">6</button></td>
+              <td><button class="days_big" onclick="myFunction()">7</button></td>
             </tr>
             <tr>
-              <td><button class="days" onclick="myFunction()">8</button></td>
-              <td><button class="days" onclick="myFunction()">9</button></td>
-              <td><button class="days" onclick="myFunction()">10</button></td>
-              <td><button class="days" onclick="myFunction()">11</button></td>
-              <td><button class="days" onclick="myFunction()">12</button></td>
-              <td><button class="days" onclick="myFunction()">13</button></td>
-              <td><button class="days" onclick="myFunction()">14</button></td>
+              <td><button class="days_big" onclick="myFunction()">8</button></td>
+              <td><button class="days_big" onclick="myFunction()">9</button></td>
+              <td><button class="days_big" onclick="myFunction()">10</button></td>
+              <td><button class="days_big" onclick="myFunction()">11</button></td>
+              <td><button class="days_big" onclick="myFunction()">12</button></td>
+              <td><button class="days_big" onclick="myFunction()">13</button></td>
+              <td><button class="days_big" onclick="myFunction()">14</button></td>
             </tr>
             <tr>
-              <td><button class="days" onclick="myFunction()">15</button></td>
-              <td><button class="days" onclick="myFunction()">16</button></td>
-              <td><button class="days" onclick="myFunction()">17</button></td>
-              <td><button class="days" onclick="myFunction()">18</button></td>
-              <td><button class="days" onclick="myFunction()">19</button></td>
-              <td><button class="days" onclick="myFunction()">20</button></td>
-              <td><button class="days" onclick="myFunction()">21</button></td>
+              <td><button class="days_big" onclick="myFunction()">15</button></td>
+              <td><button class="days_big" onclick="myFunction()">16</button></td>
+              <td><button class="days_big" onclick="myFunction()">17</button></td>
+              <td><button class="days_big" onclick="myFunction()">18</button></td>
+              <td><button class="days_big" onclick="myFunction()">19</button></td>
+              <td><button class="days_big" onclick="myFunction()">20</button></td>
+              <td><button class="days_big" onclick="myFunction()">21</button></td>
             </tr>
             <tr>
-              <td><button class="days" onclick="myFunction()">22</button></td>
-              <td><button class="days" onclick="myFunction()">23</button></td>
-              <td><button class="days" onclick="myFunction()">24</button></td>
-              <td><button class="days" onclick="myFunction()">25</button></td>
-              <td><button class="days" onclick="myFunction()">26</button></td>
-              <td><button class="days" onclick="myFunction()">27</button></td>
-              <td><button class="days" onclick="myFunction()">28</button></td>
+              <td><button class="days_big" onclick="myFunction()">22</button></td>
+              <td><button class="days_big" onclick="myFunction()">23</button></td>
+              <td><button class="days_big" onclick="myFunction()">24</button></td>
+              <td><button class="days_big" onclick="myFunction()">25</button></td>
+              <td><button class="days_big" onclick="myFunction()">26</button></td>
+              <td><button class="days_big" onclick="myFunction()">27</button></td>
+              <td><button class="days_big" onclick="myFunction()">28</button></td>
             </tr>
             <tr>
-              <td><button class="days" onclick="myFunction()">29</button></td>
-              <td><button class="days" onclick="myFunction()">29</button></td>
-              <td><button class="days" onclick="myFunction()">30</button></td>
-              <td><button class="days" onclick="myFunction()">31</button></td>
+              <td><button class="days_big" onclick="myFunction()">29</button></td>
+              <td><button class="days_big" onclick="myFunction()">29</button></td>
+              <td><button class="days_big" onclick="myFunction()">30</button></td>
+              <td><button class="days_big" onclick="myFunction()">31</button></td>
             </tr>
             <!--</div>-->
           </table>
