basic about us modal

--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
           </table>
         </div>
       </div>
-      <div class="modal" id="back">
+      <div class="modals" id="back">
         <h1 id="time-modal">What times might work?</h1>
         <h3 id="noearlierhead">No earlier than:</h3>
         <select id="noearlier">
