--- a/calendar.html
+++ b/calendar.html
@@ -123,7 +123,7 @@
           </table>
         </div>
       </div>
-      <div class="modal" id="big-back">
+      <div class="modals" id="big-back">
         <h1 id="user-availability">Team Member's Availability</h1>
         <p id="example">Paolo 11:00 AM - 2:00PM EST</p>
         <h2 id="time-modal">What times might work for you?</h1>
