--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/v4-shims.css"
+    />
     <link href="style.css" rel="stylesheet" />
     <title>WhenRUfree</title>
   </head>
@@ -61,8 +69,9 @@
         class="btn btn-primary"
         data-bs-toggle="modal"
         data-bs-target="#exampleModal"
+        id="about-button"
       >
-        ABOUT US
+        <img src="logo.png" alt="logo" class="logo" id="about-me-logo" />
       </button>
     </div>
     <script
@@ -83,10 +92,12 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+  <div
+    class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg"
+  >
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <img src="logo.png" alt="logo" class="logo" id="modal-logo" />
         <button
           type="button"
           class="btn-close"
@@ -94,13 +105,50 @@
           aria-label="Close"
         ></button>
       </div>
-      <div class="modal-body">...</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+      <div class="modal-body">
+        <p>
+          WhenRUfree is a FREE application that aims to provide professionals
+          with a responsive, modern way to find the best time to meet with your
+          team. WhenRUFree allows people across all different devices and
+          timezones to coordinate and effectively schedule critical meetings.
+        </p>
+        <h2>Meet the Team</h2>
+        <ul>
+          <li>
+            <a href="https://github.com/paolourciullo"
+              ><i class="fas fa-laptop"></i></a
+            ><label
+              >Paolo<br />
+              (Developer)</label
+            >
+          </li>
+          <li>
+            <a href="https://github.com/Huda-cloud-27598"
+              ><i class="fas fa-laptop"></i></a
+            ><label
+              >Huda<br />
+              (Developer)</label
+            >
+          </li>
+          <li>
+            <a href="https://github.com/ach0319"
+              ><i class="fas fa-laptop"></i></a
+            ><label
+              >Ashley<br />
+              (Developer)</label
+            >
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/ambareen-sultana-8484a462/"
+              ><i class="fas fa-laptop"></i></a
+            ><label
+              >Ambareen<br />
+              (Product Owner)</label
+            >
+          </li>
+        </ul>
       </div>
+      <div class="modal-footer"></div>
     </div>
   </div>
 </div>
