add status bubbles

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
         <input type="button" onclick="check(this.form)" value="Login" />
       </div>
     </form>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script src="app.js"></script>
   </body>
 </html>
