--- a/about.html
+++ b/about.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About-WhenRUfree</title>
     <img src="logo.png" alt="logo" class="logo" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link href="style.css" rel="stylesheet" />
   </head>
@@ -248,5 +255,6 @@
     <!--<a href="index.html">Back Home</a>-->
     <input type="submit" value="Create Event" id="Eventbtn" />
     <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
