--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
 
