--- a/calendar.html
+++ b/calendar.html
@@ -20,7 +20,7 @@
       <a href="www.discord.com" class="discord"><i class="fab fa-discord"></i></a>
     </div>
     <div id="event-name">
-      <p>Event Name</p>
+      <p>"Event Name"</p>
     </div>
     <div class="user-key-container">
       <div class="user-key" id="red"></div>
