--- a/about.html
+++ b/about.html
@@ -253,7 +253,9 @@
       </div>
     </div>
     <!--<a href="index.html">Back Home</a>-->
-    <input type="submit" value="Create Event" id="Eventbtn" />
+    <form action="calendar.html">
+    <input type="submit" value="Create Event" id="Eventbtn"/>
+    </form>
     <script src="script.js"></script>
     <script src="app.js"></script>
   </body>
