auto select july

--- a/calendar.html
+++ b/calendar.html
@@ -43,7 +43,7 @@
               <option>April</option>
               <option>May</option>
               <option>June</option>
-              <option>July</option>
+              <option selected="selected">July</option>
               <option>August</option>
               <option>September</option>
               <option>October</option>
